# include-what-you-use

./: .clang-format  .gitignore  .markdownlint.json  .travis.yml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.TXT  Makefile  README.md  README.txt  boost-1.64-all-private.imp  boost-1.64-all.imp  boost-1.70-all.imp  boost-1.70-private-private.imp  boost-1.70-private-public.imp  boost-1.70-public-public.imp  boost-1.75-all-private.imp  boost-1.75-all.imp  boost-all-private.imp  boost-all.imp  clang-6.intrinsics.imp  clang-skeleton.cmake  dist.sh  fix_includes.py  fix_includes_test.py  freebsd.imp  freebsd_include_map.h  gcc-8.intrinsics.imp  gcc.libc.imp  gcc.stl.debug.imp  gcc.stl.headers.imp  gcc.symbols.imp  generate_qt_mappings.py  imp2array.py  imp2json.py  include-what-you-use.1  intrin.imp  iwyu-check-license-header.py  iwyu-dogfood.bash  (+63 more)
.github/workflows/: build.yml  ci.yml  dogfood-comment.yml  mapgen.yml  pr-comments-bot.yml
branches/clang_3.2/: gcc.libc.imp  gcc.stl.headers.imp  gcc.symbols.imp  iwyu_globals.cc  iwyu_location_util.cc  iwyu_preprocessor.cc  iwyu_test_util.py  port.h
branches/clang_3.4/: CMakeLists.txt  iwyu_ast_util.cc  iwyu_ast_util.h  iwyu_driver.cc  iwyu_driver.h  iwyu_globals.cc  iwyu_preprocessor.cc  iwyu_preprocessor.h
branches/clang_3.4/tests/: built_ins_no_includes.cc  comment_pragmas-d16.h  comment_pragmas-d20.h  comment_pragmas-i11.h  default_template_arg_other_file.cc  elaborated_type_class.h  fwd_decl_nested_class.cc  implicit_ctor-d1.h  include_with_using-d3.h  integer_template_arg.cc  keep_mapping.cc  prefix_header_includes-d1.h  prefix_header_includes-d2.h  prefix_header_includes_remove.cc  varargs_and_references.cc
branches/clang_3.5/: iwyu_cache.h  iwyu_include_picker.cc  iwyu_preprocessor.cc  run_iwyu_tests.py
branches/clang_3.6/: fix_includes.py  gcc.libc.imp  iwyu_getopt.cc  iwyu_globals.cc  iwyu_globals.h  iwyu_lexer_utils.h  iwyu_location_util.h  iwyu_output.cc  make_readme.py  stl.c.headers.imp
docs/: ForwardDeclPrinter.md  IWYUFAQ.md  IWYUMappings.md  IWYUMappings.txt  IWYUPragmas.md  IWYUPragmas.txt  IWYUStyle.md  InstructionsForDevelopers.md  InstructionsForDevelopers.txt  InstructionsForUsers.md  InstructionsForUsers.txt  WhatIsAUse.md  WhatIsAUse.txt  WhyIWYU.md  WhyIWYU.txt  WhyIWYUIsDifficult.md  WhyIWYUIsDifficult.txt
mapgen/: iwyu-mapgen-apple-libc.py  iwyu-mapgen-cpython.py  iwyu-mapgen-libstdcxx.py  iwyu-mapgen-qt.py  iwyu-mapgen-std-symbol.py  iwyu-mapgen-windowsh.py
more_tests/: CMakeLists.txt  iwyu_include_picker_test.cc  iwyu_lexer_utils_test.cc  iwyu_output_test.cc  iwyu_string_util_test.cc  iwyu_test.cc  test_main.cc
pytests/: __init__.py  harness.py  simple.c.diff  simple.c.input  simple.c.iwyu  test_simple.py  test_simple_2.py
tags/clang_3.0/: CMakeLists.txt  Makefile  iwyu_globals.h  iwyu_output.h
tags/clang_3.2/: CMakeLists.txt  README.txt  iwyu_cache.cc  iwyu_globals.cc  iwyu_include_picker.h  iwyu_path_util.cc  iwyu_preprocessor.h  iwyu_verrs.cc
tags/clang_3.3/: README.txt  iwyu.cc  iwyu_ast_util.h  iwyu_driver.cc  iwyu_globals.h  iwyu_include_picker.cc  iwyu_output.cc  iwyu_path_util.cc  iwyu_preprocessor.h  iwyu_test_util.py
tags/clang_3.4/: CMakeLists.txt  gcc.stl.headers.imp  iwyu.gcc.imp  iwyu_getopt.h  iwyu_globals.h  iwyu_include_picker.cc  iwyu_include_picker.h  iwyu_output.cc  iwyu_preprocessor.cc  make_readme.py  run_iwyu_tests.py
tags/clang_3.5/: CMakeLists.txt  iwyu.gcc.imp  iwyu_output.cc  iwyu_preprocessor.cc  iwyu_preprocessor.h  run_iwyu_tests.py  third_party.imp
tags/clang_3.6/: fix_includes.py  fix_includes_test.py  iwyu.cc  iwyu_ast_util.h  iwyu_driver.cc  iwyu_globals.h  iwyu_include_picker.cc  iwyu_include_picker.h  iwyu_output.cc  iwyu_output.h  iwyu_path_util.cc
tags/include-what-you-use-3.0/: CMakeLists.txt  README.txt  iwyu.cc  iwyu_ast_util.cc  iwyu_driver.cc  iwyu_driver.h  iwyu_getopt.h  iwyu_globals.cc  iwyu_include_picker.h  iwyu_lexer_utils.cc  iwyu_path_util.cc  iwyu_test_util.py  port.h
tests/: associated_include.cc  avoids_double_specialization.cc  badinc-d1.h  badinc.cc  badinc.h  badinc.imp  check_also-n1.h  comment_pragmas-d1.h  comment_pragmas-d15.h  comment_pragmas-d2.h  comment_pragmas-d3.h  comment_pragmas-d5.h  comment_pragmas-d7.h  comment_pragmas-d9.h  comment_pragmas-i6.h  comment_pragmas.cc  computed_include.cc  conversion_ctor.cc  cvr-class.h  cvr.cc  default_template_arg_other_file-d1.h  default_template_arg_other_file-i2.h  default_template_arg_other_file-o1.h  default_template_arg_other_file.cc  depopulated_h_file-i1.h  depopulated_h_file.h  derived_function_tpl_args-i1.h  direct.h  elaborated_type_class.h  elaborated_type_struct.h  fwd_decl_class_template.cc  fwd_decl_class_template.h  fwd_decl_nested_class.cc  fwd_decl_then_dfn.cc  implicit_ctor-i1.h  include_with_using-d2.h  indirect.h  iwyu_stricter_than_cpp-fnreturn.h  iwyu_stricter_than_cpp.cc  macro_location-d2.h  (+26 more)
tests/bugs/: README.md
tests/c/: array.c  comment_pragma.c  direct.h  elaborated_struct-d2.h  enum-i1.h  (+32 more)
trunk/: CMakeLists.txt  Makefile  README.txt  dist.sh  fix_includes.py  fix_includes_test.py  gcc.libc.imp  google.imp  iwyu.cc  iwyu.gcc.imp  iwyu_ast_util.cc  iwyu_ast_util.h  iwyu_cache.cc  iwyu_cache.h  iwyu_driver.cc  iwyu_getopt.cc  iwyu_getopt.h  iwyu_globals.cc  iwyu_globals.h  iwyu_include_picker.cc  iwyu_include_picker.h  iwyu_lexer_utils.cc  iwyu_lexer_utils.h  iwyu_location_util.cc  iwyu_location_util.h  iwyu_output.cc  iwyu_output.h  iwyu_path_util.cc  iwyu_path_util.h  iwyu_preprocessor.cc  iwyu_preprocessor.h  iwyu_stl_util.h  iwyu_string_util.h  iwyu_test_util.py  iwyu_verrs.h  iwyu_version.h  make_readme.py  port.h  run_iwyu_tests.py
unittests/: iwyu_include_picker_test.cc  iwyu_lexer_utils_test.cc  iwyu_output_test.cc  iwyu_path_util_test.cc  iwyu_regex_test.cc  iwyu_stl_util_test.cc  iwyu_string_util_test.cc  iwyu_test_helpers.h  iwyu_unittest_main.cc  iwyu_verrs_test.cc
wiki/: IWYUMappings.wiki  IWYUPragmas.wiki  InstructionsForDevelopers.wiki  InstructionsForUsers.wiki  WhatIsAUse.wiki  WhyIWYU.wiki  WhyIWYUIsDifficult.wiki
(+1378 files in other folders)
